Changes (design issues): -Actions column is now fixed -Issue with date created showing nothing is now solved -RecipeDetailsModal header not showing correctly on mobile is now fixed -Learn how to be a master chef.... is now no longer static -Saved recipes icon disappearing is now fixed -Fixed an issue with Logging in and Registering on the mobile version

--- a/Recipe-Finder/src/Scss/RecipeDetailsModal.scss
+++ b/Recipe-Finder/src/Scss/RecipeDetailsModal.scss
@@ -117,6 +117,7 @@
 
                         h1 {
                             font-size: 2rem;
+                            text-align: center;
                         }
 
                         p {
